update necessary information

--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Senior Fullstack Engineer specializing in enterprise SaaS systems and scalable architectures." />
-    <title>Wei Xie - Senior Fullstack Engineer</title>
+    <meta name="description" content="Wei Xie is a Fullstack Engineer focused on modular enterprise platforms, scalable SaaS systems, and modern Vue 3 + ASP.NET Core architectures." />
+    <meta property="og:title" content="Wei Xie - Fullstack Engineer" />
+    <meta property="og:description" content="Fullstack Engineer designing modular enterprise platforms and scalable SaaS systems, with Vue 3 + TypeScript frontends and ASP.NET Core backends." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://wxie-dev.github.io/" />
+    <meta property="og:image" content="/og-image.png" />
+    <!-- Modern browsers: SVG favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- Fallback for older browsers: ICO favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <!-- Apple touch icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <!-- Mobile browser theme color -->
+    <meta name="theme-color" content="#0f172a" />
+    <title>Wei Xie - Fullstack Engineer</title>
   </head>
   <body>
     <div id="app"></div>
